[package]
name = "derive_jserror"
version = "0.1.0"
edition = "2021"
description = "#[derive(JsError)]"
readme = "README.md"
repository = "https://github.com/ProspectPyxis/derive_jserror"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "derive", "error-handling"]
categories = ["wasm", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
wasm-bindgen = "0.2"

[dev-dependencies]
thiserror = "1.0"

[lib]
proc_macro = true
